// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard test should render correctly 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        Product 1
      </h2>
      <div
        class="product-card__description"
      >
        best product
      </div>
      <h1
        class="product-card__price"
      >
        777 ₽
      </h1>
      <div
        class="product-card__category"
      >
        Для дома
      </div>
    </div>
    <img
      alt="Product 1"
      class="product-card__image"
      src="/product.png"
    />
  </div>
</DocumentFragment>
`;

exports[`ProductCard test should render correctly without image 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        Product 1
      </h2>
      <div
        class="product-card__description"
      >
        best product
      </div>
      <h1
        class="product-card__price"
      >
        777 ₽
      </h1>
      <div
        class="product-card__category"
      >
        Для дома
      </div>
    </div>
  </div>
</DocumentFragment>
`;
